# word-counter

./: README.md  config.json  counter.py  file-watcher.py  pyproject.toml
