[tool.poetry]
name = "word-counter"
version = "0.1.0"
description = ""
authors = ["Borealin <308704199deniel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
watchdog = "^2.1.8"
fastclasses-json = "^0.5.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
